==> gvissers/Robot/bno055.cpp <==
 #include "Arduino.h"
 #include "WProgram.h"
#include <math.h>
#include <limits.h>
#include "bno055.h"

bool Adafruit_BNO055::begin(adafruit_bno055_opmode_t mode)
{
    /* Enable I2C */
    Wire.begin();

    /* Make sure we have the right device */
    uint8_t id = read8(BNO055_CHIP_ID_ADDR);
    if (id != BNO055_ID)
    {
        delay(1000); // hold on for boot
        id = read8(BNO055_CHIP_ID_ADDR);
        if (id != BNO055_ID)
            return false;  // still not? ok bail
    }

    /* Switch to config mode (just in case since this is the default) */
    setMode(OPERATION_MODE_CONFIG);

    /* Reset */
    write8(BNO055_SYS_TRIGGER_ADDR, 0x20);
    while (read8(BNO055_CHIP_ID_ADDR) != BNO055_ID)
        delay(10);
    delay(50);

    /* Set to normal power mode */
    write8(BNO055_PWR_MODE_ADDR, POWER_MODE_NORMAL);
    delay(10);

    write8(BNO055_PAGE_ID_ADDR, 0);

    /* Set the output units */
    /*
    uint8_t unitsel = (0 << 7) | // Orientation = Android
                        (0 << 4) | // Temperature = Celsius
                        (0 << 2) | // Euler = Degrees
                        (1 << 1) | // Gyro = Rads
                        (0 << 0);  // Accelerometer = m/s^2
    write8(BNO055_UNIT_SEL_ADDR, unitsel);
    */

    /* Configure axis mapping (see section 3.4) */
    /*
    write8(BNO055_AXIS_MAP_CONFIG_ADDR, REMAP_CONFIG_P2); // P0-P7, Default is P1
    delay(10);
    write8(BNO055_AXIS_MAP_SIGN_ADDR, REMAP_SIGN_P2); // P0-P7, Default is P1
    delay(10);
    */

    write8(BNO055_SYS_TRIGGER_ADDR, 0x0);
    delay(10);
    /* Set the requested operating mode (see section 3.3) */
    setMode(mode);
    delay(20);

    return true;
}

void Adafruit_BNO055::setMode(adafruit_bno055_opmode_t mode)
{
    _mode = mode;
    write8(BNO055_OPR_MODE_ADDR, _mode);
    delay(30);
}

void Adafruit_BNO055::setExtCrystalUse(boolean usextal)
{
    adafruit_bno055_opmode_t modeback = _mode;

    /* Switch to config mode (just in case since this is the default) */
    setMode(OPERATION_MODE_CONFIG);
    delay(25);
    write8(BNO055_PAGE_ID_ADDR, 0);
    write8(BNO055_SYS_TRIGGER_ADDR, usextal ? 0x80 : 0x00);
    delay(10);
    /* Set the requested operating mode (see section 3.3) */
    setMode(modeback);
    delay(20);
}

imu::Vector<3> Adafruit_BNO055::getVector(adafruit_vector_type_t type) const
{
    imu::Vector<3> xyz;
    uint8_t buffer[6];
    int16_t x, y, z;

    /* Read vector data (6 bytes) */
    readLen((adafruit_bno055_reg_t)type, buffer, 6);

    x = ((int16_t)buffer[0]) | (((int16_t)buffer[1]) << 8);
    y = ((int16_t)buffer[2]) | (((int16_t)buffer[3]) << 8);
    z = ((int16_t)buffer[4]) | (((int16_t)buffer[5]) << 8);

    /* Convert the value to an appropriate range (section 3.6.4) */
    /* and assign the value to the Vector type */
    switch(type)
    {
        case VECTOR_MAGNETOMETER:
            /* 1uT = 16 LSB */
        case VECTOR_EULER:
            /* 1 degree = 16 LSB */
            xyz[0] = ((double)x)/16.0;
            xyz[1] = ((double)y)/16.0;
            xyz[2] = ((double)z)/16.0;
            break;
        case VECTOR_GYROSCOPE:
            /* 1rps = 900 LSB */
            xyz[0] = ((double)x)/900.0;
            xyz[1] = ((double)y)/900.0;
            xyz[2] = ((double)z)/900.0;
            break;
        case VECTOR_ACCELEROMETER:
        case VECTOR_LINEARACCEL:
        case VECTOR_GRAVITY:
            /* 1m/s^2 = 100 LSB */
            xyz[0] = ((double)x)/100.0;
            xyz[1] = ((double)y)/100.0;
            xyz[2] = ((double)z)/100.0;
            break;
    }

    return xyz;
}

bool Adafruit_BNO055::getSensorOffsets(uint8_t* calib_data)
{
    if (!isFullyCalibrated())
        return false;

    adafruit_bno055_opmode_t lastMode = _mode;
    setMode(OPERATION_MODE_CONFIG);
    readLen(ACCEL_OFFSET_X_LSB_ADDR, calib_data, NUM_BNO055_OFFSET_REGISTERS);
    setMode(lastMode);
    return true;
}

bool Adafruit_BNO055::getSensorOffsets(adafruit_bno055_offsets_t& offsets)
{
    if (!isFullyCalibrated())
        return false;

    adafruit_bno055_opmode_t lastMode = _mode;
    setMode(OPERATION_MODE_CONFIG);
    delay(25);

    offsets.accel_offset_x = (read8(ACCEL_OFFSET_X_MSB_ADDR) << 8) | (read8(ACCEL_OFFSET_X_LSB_ADDR));
    offsets.accel_offset_y = (read8(ACCEL_OFFSET_Y_MSB_ADDR) << 8) | (read8(ACCEL_OFFSET_Y_LSB_ADDR));
    offsets.accel_offset_z = (read8(ACCEL_OFFSET_Z_MSB_ADDR) << 8) | (read8(ACCEL_OFFSET_Z_LSB_ADDR));

    offsets.gyro_offset_x = (read8(GYRO_OFFSET_X_MSB_ADDR) << 8) | (read8(GYRO_OFFSET_X_LSB_ADDR));
    offsets.gyro_offset_y = (read8(GYRO_OFFSET_Y_MSB_ADDR) << 8) | (read8(GYRO_OFFSET_Y_LSB_ADDR));
    offsets.gyro_offset_z = (read8(GYRO_OFFSET_Z_MSB_ADDR) << 8) | (read8(GYRO_OFFSET_Z_LSB_ADDR));

    offsets.mag_offset_x = (read8(MAG_OFFSET_X_MSB_ADDR) << 8) | (read8(MAG_OFFSET_X_LSB_ADDR));
    offsets.mag_offset_y = (read8(MAG_OFFSET_Y_MSB_ADDR) << 8) | (read8(MAG_OFFSET_Y_LSB_ADDR));
    offsets.mag_offset_z = (read8(MAG_OFFSET_Z_MSB_ADDR) << 8) | (read8(MAG_OFFSET_Z_LSB_ADDR));

    offsets.accel_radius = (read8(ACCEL_RADIUS_MSB_ADDR) << 8) | (read8(ACCEL_RADIUS_LSB_ADDR));
    offsets.mag_radius = (read8(MAG_RADIUS_MSB_ADDR) << 8) | (read8(MAG_RADIUS_LSB_ADDR));

    setMode(lastMode);
    return true;
}

void Adafruit_BNO055::setSensorOffsets(const uint8_t* calib_data)
{
    adafruit_bno055_opmode_t lastMode = _mode;
    setMode(OPERATION_MODE_CONFIG);
    delay(25);

    /* A writeLen() would make this much cleaner */
    write8(ACCEL_OFFSET_X_LSB_ADDR, calib_data[0]);
    write8(ACCEL_OFFSET_X_MSB_ADDR, calib_data[1]);
    write8(ACCEL_OFFSET_Y_LSB_ADDR, calib_data[2]);
    write8(ACCEL_OFFSET_Y_MSB_ADDR, calib_data[3]);
    write8(ACCEL_OFFSET_Z_LSB_ADDR, calib_data[4]);
    write8(ACCEL_OFFSET_Z_MSB_ADDR, calib_data[5]);

    write8(GYRO_OFFSET_X_LSB_ADDR, calib_data[6]);
    write8(GYRO_OFFSET_X_MSB_ADDR, calib_data[7]);
    write8(GYRO_OFFSET_Y_LSB_ADDR, calib_data[8]);
    write8(GYRO_OFFSET_Y_MSB_ADDR, calib_data[9]);
    write8(GYRO_OFFSET_Z_LSB_ADDR, calib_data[10]);
    write8(GYRO_OFFSET_Z_MSB_ADDR, calib_data[11]);

    write8(MAG_OFFSET_X_LSB_ADDR, calib_data[12]);
    write8(MAG_OFFSET_X_MSB_ADDR, calib_data[13]);
    write8(MAG_OFFSET_Y_LSB_ADDR, calib_data[14]);
    write8(MAG_OFFSET_Y_MSB_ADDR, calib_data[15]);
    write8(MAG_OFFSET_Z_LSB_ADDR, calib_data[16]);
    write8(MAG_OFFSET_Z_MSB_ADDR, calib_data[17]);

    write8(ACCEL_RADIUS_LSB_ADDR, calib_data[18]);
    write8(ACCEL_RADIUS_MSB_ADDR, calib_data[19]);

    write8(MAG_RADIUS_LSB_ADDR, calib_data[20]);
    write8(MAG_RADIUS_MSB_ADDR, calib_data[21]);

    setMode(lastMode);
}

void Adafruit_BNO055::setSensorOffsets(const adafruit_bno055_offsets_t& offsets)
{
    adafruit_bno055_opmode_t lastMode = _mode;
    setMode(OPERATION_MODE_CONFIG);
    delay(25);

    write8(ACCEL_OFFSET_X_LSB_ADDR, (offsets.accel_offset_x) & 0x0FF);
    write8(ACCEL_OFFSET_X_MSB_ADDR, (offsets.accel_offset_x >> 8) & 0x0FF);
    write8(ACCEL_OFFSET_Y_LSB_ADDR, (offsets.accel_offset_y) & 0x0FF);
    write8(ACCEL_OFFSET_Y_MSB_ADDR, (offsets.accel_offset_y >> 8) & 0x0FF);
    write8(ACCEL_OFFSET_Z_LSB_ADDR, (offsets.accel_offset_z) & 0x0FF);
    write8(ACCEL_OFFSET_Z_MSB_ADDR, (offsets.accel_offset_z >> 8) & 0x0FF);

    write8(GYRO_OFFSET_X_LSB_ADDR, (offsets.gyro_offset_x) & 0x0FF);
    write8(GYRO_OFFSET_X_MSB_ADDR, (offsets.gyro_offset_x >> 8) & 0x0FF);
    write8(GYRO_OFFSET_Y_LSB_ADDR, (offsets.gyro_offset_y) & 0x0FF);
    write8(GYRO_OFFSET_Y_MSB_ADDR, (offsets.gyro_offset_y >> 8) & 0x0FF);
    write8(GYRO_OFFSET_Z_LSB_ADDR, (offsets.gyro_offset_z) & 0x0FF);
    write8(GYRO_OFFSET_Z_MSB_ADDR, (offsets.gyro_offset_z >> 8) & 0x0FF);

    write8(MAG_OFFSET_X_LSB_ADDR, (offsets.mag_offset_x) & 0x0FF);
    write8(MAG_OFFSET_X_MSB_ADDR, (offsets.mag_offset_x >> 8) & 0x0FF);
    write8(MAG_OFFSET_Y_LSB_ADDR, (offsets.mag_offset_y) & 0x0FF);
    write8(MAG_OFFSET_Y_MSB_ADDR, (offsets.mag_offset_y >> 8) & 0x0FF);
    write8(MAG_OFFSET_Z_LSB_ADDR, (offsets.mag_offset_z) & 0x0FF);
    write8(MAG_OFFSET_Z_MSB_ADDR, (offsets.mag_offset_z >> 8) & 0x0FF);

    write8(ACCEL_RADIUS_LSB_ADDR, (offsets.accel_radius) & 0x0FF);
    write8(ACCEL_RADIUS_MSB_ADDR, (offsets.accel_radius >> 8) & 0x0FF);

    write8(MAG_RADIUS_LSB_ADDR, (offsets.mag_radius) & 0x0FF);
    write8(MAG_RADIUS_MSB_ADDR, (offsets.mag_radius >> 8) & 0x0FF);

    setMode(lastMode);
}

bool Adafruit_BNO055::write8(adafruit_bno055_reg_t reg, byte value)
{
    Wire.beginTransmission(_address);
#if ARDUINO >= 100
    Wire.write((uint8_t)reg);
    Wire.write((uint8_t)value);
#else
    Wire.send(reg);
    Wire.send(value);
#endif
    Wire.endTransmission();

    /* XXX TODO: Check for error! */
    return true;
}

bool Adafruit_BNO055::readLen(adafruit_bno055_reg_t reg, byte* buffer,
    uint8_t len) const
{
    Wire.beginTransmission(_address);
#if ARDUINO >= 100
    Wire.write((uint8_t)reg);
#else
    Wire.send(reg);
#endif
    Wire.endTransmission();
    Wire.requestFrom(_address, (byte)len);

    for (uint8_t i = 0; i < len; i++)
    {
#if ARDUINO >= 100
        buffer[i] = Wire.read();
#else
        buffer[i] = Wire.receive();
#endif
    }

    /* XXX TODO: Check for errors! */
    return true;
}
